--- a/content/home.phtml
+++ b/content/home.phtml
@@ -1,3 +1,3 @@
-<h1>Welcome to Contoso Costume Rentals<</h1>
-<p>Professional hire for classic, vintage, and contemporary costumes to whim characters, we have it. Use for shop displays, TV, film, theater or promotional events, parties, weddings, graduations, our wide range will meet all your needs. All costumes are categorised by period, size, comfort and look.</p>
+<br>
+<p>Professional hire for classic, vintage, and contemporary costumes. Use for shop displays, TV, film, theater or promotional events, parties, weddings, graduations, our wide range will meet all your needs. All costumes are categorised by period, size, comfort and look.</p>
 <p>Book an appointment to visit our costume store, our professional and knowledgeable team is on hand with expert fitting and styling advice.</p>
