--- a/template/style.css
+++ b/template/style.css
@@ -10,6 +10,7 @@ article {
     padding: 40px; 
     line-height: 150%; 
     text-align: left; 
+    font-family: Helvetica, Arial, Sans-Serif;
 }
 
 nav .item {
