--- a/content/services.phtml
+++ b/content/services.phtml
@@ -3,18 +3,22 @@
 <table>
   <tr>
     <th>Event</th>
+    <th>&nbsp;</th>
     <th>Suggestion</th>
   </tr>
   <tr>
     <td>Product launch</td>
+    <td>&nbsp;</td>
     <td>Dress suit</td>
   </tr>
   <tr>
     <td>Party</td>
+    <td>&nbsp;</td>    
     <td>Evening wear</td>
   </tr>
   <tr>
     <td>Special occasion</td>
+    <td>&nbsp;</td>
     <td>Fancy dress</td>
   </tr>
 </table>
