--- a/template/style.css
+++ b/template/style.css
@@ -5,6 +5,7 @@
     padding: 30px 40px; 
     text-align: center; 
     box-shadow: 0 4px 25px -4px #9da5ab; 
+    font-family: Helvetica, Arial, Sans-Serif;    
 }
 article { 
     padding: 40px; 
