--- a/template/style.css
+++ b/template/style.css
@@ -1,10 +1,9 @@
 
-.wrap { 
-    max-width: 720px; 
+.content { 
+    max-width: 800px; 
     margin: 50px auto; 
     padding: 30px 40px; 
     text-align: center; 
-    box-shadow: 0 4px 25px -4px #9da5ab; 
     font-family: Helvetica, Arial, Sans-Serif;    
 }
 article { 
