--- a/template/style.css
+++ b/template/style.css
@@ -1,9 +1,10 @@
 
 .content { 
-    max-width: 800px; 
+    max-width: 680px; 
     margin: 50px auto; 
     padding: 30px 40px; 
     text-align: center; 
+    border: 4px solid #ef1b36; 
     font-family: Helvetica, Arial, Sans-Serif;    
 }
 article { 
@@ -17,5 +18,5 @@ nav .item {
     text-decoration: none;
 }
 nav .active {
-    border-bottom: 1px solid;
+    border-bottom: 1px solid #ef1b36;
 }
